<resources>
    <string name="app_name">SimpleMovieApplication</string>
    <string name="real_app_name">Movie App</string>
    <string name="hamburger_menu_title">Hamburger</string>
    <string name="latest">LATEST</string>
    <string name="recent">RECENT MOVIES</string>
    <string name="popular">POPULAR</string>
    <string name="no_results_found">No results found \n try typing a movie name in search</string>
    <string name="no_results_for_such_criteria">No results for such criteria</string>
    <string name="type_something">Type something here…</string>
    <string name="three_dots_clicked">You clicked on three dots</string>
    <string name="navigation_clicked">You clicked on navigation</string>
    <string name="rate_movie">Rate movie</string>
    <string name="Cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="known_for">Known for</string>
    <string name="tv_series">TV Series</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_movie_rating_fragment">Rate Movie</string>
    <string name="confirm_rating">Confirm</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="rated_movies">Rated Movies</string>
    <string name="log_out">Log Out</string>
    <string name="login_successful">You successfully logged in</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="youtube_url">vnd.youtube:</string>
    <string name="movie_rated_successful">You successfully rated movie</string>
    <string name="movie_rated_failed">Error</string>

</resources>