<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_8dp">

        <ImageView
            android:id="@+id/img_details_poster"
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:background="@color/fragment_background"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_img_play"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:alpha="0.5"
            android:background="@drawable/simple_rounded_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/img_details_poster"
            app:layout_constraintEnd_toEndOf="@id/img_details_poster"
            app:layout_constraintStart_toStartOf="@id/img_details_poster"
            app:layout_constraintTop_toTopOf="@id/img_details_poster">

            <ImageButton
                android:id="@+id/btn_details_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_rounded_button"
                android:padding="@dimen/margin_16dp"
                android:src="@drawable/play_button" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/rating_bar_details"
            style="@android:style/Widget.Holo.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:backgroundTint="@color/rating_start_background"
            android:numStars="5"
            android:progressTint="@color/rating_star_red"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@id/ll_line_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_details_poster" />

        <TextView
            android:id="@+id/tv_rating_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:maxLines="1"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/rating_bar_details"
            app:layout_constraintStart_toEndOf="@id/rating_bar_details"
            app:layout_constraintTop_toTopOf="@id/rating_bar_details"
            tools:text="3.5" />

        <TextView
            android:id="@+id/tv_rate_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:text="@string/rate_movie"
            android:textColor="@color/rate_movie_text_color"
            app:layout_constraintBottom_toBottomOf="@id/rating_bar_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rating_bar_details" />

        <LinearLayout
            android:id="@+id/ll_line_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="22dp"
            android:background="@color/line_separator"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/rating_bar_details" />

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:textAlignment="textStart"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_line_separator" />

        <TextView
            android:id="@+id/tv_info_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:textAlignment="textStart"
            android:textColor="@color/info_text_color"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_details_title" />

        <LinearLayout
            android:id="@+id/ll_line_separator2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@color/line_separator"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_info_details" />

        <TextView
            android:id="@+id/tv_details_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:text="@string/Cast"
            android:textColor="@color/info_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_details_title"
            app:layout_constraintTop_toBottomOf="@id/ll_line_separator2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_details_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_cast" />

        <TextView
            android:id="@+id/tv_details_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:text="@string/reviews"
            android:textColor="@color/info_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_details_cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_details_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_review" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>